--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <span class="cola" >I</span>
     <span class="cola" >P</span>
     <span class="cola" >E</span>
-    <span class="cola" >D</span>
+    <span class="cola" >D</span>git
   </div>
 </body>
 </html>
